<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.ivc17088adm.pizzamvvm.viewmodel.PizzaViewModel" />
    </data>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/recycler_view_display">
    </android.support.v7.widget.RecyclerView>
</layout>